fixed for CHLK-4912 Teacher. Feed. Cut off names of classes during using the 'copy' feature

--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-form-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-form-page.sass
@@ -1,5 +1,8 @@
 .double-select.chosen-container.chosen-with-drop
   LI.active-result
+    overflow: hidden
+    text-overflow: ellipsis
+
     &:hover, &.active-item
       color: #56554f
       background: #f1f1f1
